--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
         <!-- Заголовок -->
         <header class="text-center mb-8">
-            <h1 class="text-3xl font-bold text-gray-800">Пошук обладнання</h1>
+            <a href="index.html" id="home-link">
+                <h1 class="text-3xl font-bold text-gray-800">Пошук обладнання</h1>
+            </a>
             <p class="text-gray-500 mt-2">Знайдіть ЕМ, КВПіА, датчики та багато іншого.</p>
         </header>
 
