--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <h1 class="text-3xl font-bold text-gray-800">Пошук обладнання</h1>
             </a>
             <p class="text-gray-500 mt-2">Знайдіть ЕМ, КВПіА, датчики та багато іншого.</p>
+
+            <!-- ДОДАЙТЕ ЦЮ КНОПКУ -->
+            <button id="install-btn" class="hidden mt-4 bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-200 shadow-md">
+                Встановити додаток
+            </button>
         </header>
 
         <div id="controls-container" class="flex flex-col md:flex-row gap-4 mb-8 items-center">
